Regualrizar bugs
